# silentdata-defi-enclave

./: README.md  buildsd
enclave/: .gitignore  CMakeLists.txt
enclave/clients/: CMakeLists.txt
enclave/clients/accounting/: CMakeLists.txt  xero_client.cpp  xero_client.hpp
enclave/clients/api_client/: CMakeLists.txt  api_client.cpp  api_client.hpp  oauth_api_client.hpp
enclave/clients/banking/: CMakeLists.txt  bank_client.hpp  plaid_client.cpp  plaid_client.hpp  truelayer_client.cpp  truelayer_client.hpp
enclave/clients/identity/: CMakeLists.txt  instagram_client.cpp  instagram_client.hpp  onfido_client.cpp  onfido_client.hpp
enclave/clients/invoices/: CMakeLists.txt  crossflow_certificate.h  crossflow_client.cpp  crossflow_client.hpp
enclave/clients/registry/: CMakeLists.txt  companieshouse_client.cpp  companieshouse_client.hpp
enclave/cmake/: FindProtoGen.cmake  FindSGX.cmake
enclave/enclave/: CMakeLists.txt
enclave/enclave/worker/: CMakeLists.txt  global.hpp  worker_enclave.config.xml  worker_enclave.cpp  worker_enclave.edl  worker_enclave_debug.config.xml
enclave/include/: core_constants.h  core_status_codes.h  core_status_message.h  ias_root_ca_cert.hpp  proof_types.h
enclave/lib/: CMakeLists.txt
enclave/lib/cbor/: CMakeLists.txt  cbor.h  cborencoder.c  cborencoder_close_container_checked.c  cborencoder_float.c  cborerrorstrings.c  cborinternal_p.h  cborparser.c  compilersupport_p.h
enclave/lib/client/: CMakeLists.txt  cacert.hpp  client_opt.h  httpresponseparser.h  https_client.cpp  https_client.hpp  https_response.cpp  https_response.hpp  response.h
enclave/lib/common/: CMakeLists.txt  cbor_map.cpp  cbor_map.hpp  credit_rating.cpp  credit_rating.hpp  date_time.cpp  date_time.hpp  decoders.cpp  decoders.hpp  enclave_exception.hpp  enclave_logger.cpp  encoders.cpp  encoders.hpp  json.hpp  logicsig.cpp  logicsig.hpp  optional.hpp  sgx_error_message.cpp  sgx_error_message.hpp  types.hpp
enclave/lib/crypto/: CMakeLists.txt  aes_gcm_key.cpp  aes_gcm_key.hpp  ec256_key_manager.cpp  ec256_key_manager.hpp  ec256_key_pair.cpp  ec256_key_pair.hpp  ed25519_key_pair.cpp  ed25519_key_pair.hpp  hash.cpp  hash.hpp  rsa_key_pair.cpp  rsa_key_pair.hpp
enclave/lib/eddsa/: CMakeLists.txt  burn.c  burn.h  burnstack.c  ed.c  ed.h  ed25519-sha512.c  eddsa.h  fld.c  fld.h  limb.h  sc.c  sc.h  sha512-256.c  sha512-256.h  sha512.c  sha512.h  x25519.c
enclave/lib/ias/: CMakeLists.txt  report.cpp  report.hpp  verify.cpp  verify.hpp
enclave/lib/proof/: CMakeLists.txt  api_requests.cpp  api_requests.hpp  comparison_functions.cpp  comparison_functions.hpp  crossflow_public_key.hpp  (+8 more)
enclave/proto/: CMakeLists.txt  messages.proto  requests.proto
(+3 files in other folders)
